--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "electron": "electron",
     "electron:serve-tsc": "tsc -p tsconfig.electron.json",
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && electron . --serve",
-    "electron:local": "npm run build && electron ."
+    "electron:local": "npm run build && electron .",
+    "prettier": "prettier --write ."
   },
   "private": true,
   "dependencies": {
@@ -38,9 +39,11 @@
     "@angular-devkit/build-angular": "^14.2.0",
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "^14.0.0-next.0",
+    "@newceptiondev/prettier-config": "1.0.4",
     "@types/electron": "^1.6.10",
     "@types/jasmine": "~4.0.0",
     "electron": "^20.1.0",
+    "eslint": "^8.27.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -48,6 +51,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.5.1",
     "typescript": "~4.7.2",
     "wait-on": "^6.0.1"
   }
