--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "electron:local": "npm run build && electron .",
     "prettier": "prettier --write ."
   },
+  "prettier": "@newceptiondev/prettier-config",
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0-next.0",
@@ -51,7 +52,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
+    "prettier": "^2.8.0",
     "typescript": "~4.7.2",
     "wait-on": "^6.0.1"
   }
