--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "electron:serve-tsc": "tsc -p tsconfig.electron.json",
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && electron . --serve",
     "electron:local": "npm run build && electron .",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "eslint": "eslint .",
+    "eslint:fix": "eslint --fix .",
+    "format": "npm run prettier && npm run eslint:fix"
   },
   "prettier": "@newceptiondev/prettier-config",
   "private": true,
@@ -40,11 +43,13 @@
     "@angular-devkit/build-angular": "^14.2.0",
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "^14.0.0-next.0",
+    "@newceptiondev/eslint-config": "1.0.2",
     "@newceptiondev/prettier-config": "1.0.4",
     "@types/electron": "^1.6.10",
     "@types/jasmine": "~4.0.0",
     "electron": "^20.1.0",
     "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
