--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "prettier": "prettier --write .",
     "eslint": "eslint .",
     "eslint:fix": "eslint --fix .",
-    "format": "npm run prettier && npm run eslint:fix"
+    "format": "npm run prettier && npm run eslint:fix",
+    "lint": "ng lint"
   },
-  "prettier": "@newceptiondev/prettier-config",
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0-next.0",
@@ -41,14 +41,21 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.0",
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "^14.0.0-next.0",
     "@newceptiondev/eslint-config": "1.0.2",
     "@newceptiondev/prettier-config": "1.0.4",
     "@types/electron": "^1.6.10",
     "@types/jasmine": "~4.0.0",
-    "electron": "^20.1.0",
-    "eslint": "^8.27.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "electron": "^22.2.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
