--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "format": "npm run prettier && npm run eslint:fix && npm run prettier",
     "lint": "ng lint",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -54,6 +57,7 @@
     "@angular-eslint/template-parser": "14.4.0",
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "^14.0.0-next.0",
+    "@cypress/schematic": "^2.5.1",
     "@electron-forge/cli": "^6.4.2",
     "@electron-forge/maker-deb": "^6.4.2",
     "@electron-forge/maker-rpm": "^6.4.2",
@@ -78,6 +82,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
     "typescript": "~4.7.2",
-    "wait-on": "^6.0.1"
+    "wait-on": "^6.0.1",
+    "cypress": "latest"
   }
 }
