added pr validation workflow

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../tsconfig.json",
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "cypress.config.ts"],
   "compilerOptions": {
     "sourceMap": false,
     "types": ["cypress"]
