--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "ng:serve": "ng serve -o",
     "build": "npm run electron:serve-tsc && ng build --base-href ./",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --source-map=false --browsers=ChromeHeadless --watch=false",
     "electron": "electron",
     "electron:serve-tsc": "tsc -p tsconfig.electron.json",
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && electron . --serve",
     "electron:local": "npm run build && electron .",
     "prettier": "prettier --write .",
+    "prettier:check": "prettier .",
     "eslint": "eslint .",
     "eslint:fix": "eslint --fix .",
     "format": "npm run prettier && npm run eslint:fix && npm run prettier",
