--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "module": "es2020",
     "lib": ["es2020", "dom"]
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "cypress/**/*.ts", "cypress.config.ts"],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
