install angular cli before running ng command

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
+      - run: npm i @angular/cli
       - run: ng run RecipeLibrary:cypress-run
 
   check_formatting:
