--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ng": "ng",
     "start:local": "npm-run-all -p electron:serve ng:serve",
     "start": "electron-forge start",
-    "ng:serve": "ng serve -o",
+    "ng:serve": "ng serve",
     "build": "npm run electron:serve-tsc && ng build --base-href ./",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --source-map=false --browsers=ChromeHeadless --watch=false",
