adjust workflow to trigger on pr change

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -1,14 +1,13 @@
 name: "PR Validation"
 
 on:
-  push
-  # pull_request:
-  #   branches:
-  #   - main
-  #   types:
-  #     - opened
-  #     - reopened
-  #     - edited
+  pull_request:
+    branches:
+    - main
+    types:
+      - opened
+      - reopened
+      - edited
 
 jobs:
   run_unit_tests:
