--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@cypress/schematic": "^2.5.1",
     "@electron-forge/cli": "^6.4.2",
     "@electron-forge/maker-deb": "^6.4.2",
-    "@electron-forge/maker-rpm": "^6.4.2",
+    "@electron-forge/maker-dmg": "^6.4.2",
     "@electron-forge/maker-squirrel": "^6.4.2",
     "@electron-forge/maker-zip": "^6.4.2",
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
@@ -71,6 +71,7 @@
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.43.0",
     "@typescript-eslint/parser": "5.43.0",
+    "cypress": "latest",
     "electron": "^22.3.23",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
@@ -83,7 +84,6 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
     "typescript": "~4.7.2",
-    "wait-on": "^6.0.1",
-    "cypress": "latest"
+    "wait-on": "^7.2.0"
   }
 }
