--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "name": "Julius Schmidt",
     "email": "newceptiondev@googlemail.com"
   },
+  "license": "UNLICENSED",
   "description": "Recipe Library, making it easy to find Recipes based on Ingredients, Cookbook or Categories",
   "main": "app/main.js",
   "scripts": {
@@ -59,12 +60,12 @@
     "@angular/cli": "~14.2.0",
     "@angular/compiler-cli": "^14.0.0-next.0",
     "@cypress/schematic": "^2.5.1",
-    "@electron-forge/cli": "^6.4.2",
-    "@electron-forge/maker-deb": "^6.4.2",
-    "@electron-forge/maker-dmg": "^6.4.2",
-    "@electron-forge/maker-squirrel": "^6.4.2",
-    "@electron-forge/maker-zip": "^6.4.2",
-    "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
+    "@electron-forge/cli": "^7.3.1",
+    "@electron-forge/maker-deb": "^7.3.1",
+    "@electron-forge/maker-dmg": "^7.3.1",
+    "@electron-forge/maker-squirrel": "^7.3.1",
+    "@electron-forge/maker-zip": "^7.3.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.3.1",
     "@newceptiondev/eslint-config": "1.0.2",
     "@newceptiondev/prettier-config": "1.0.4",
     "@types/jasmine": "~4.0.0",
