--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@electron-forge/maker-squirrel": "^7.3.1",
     "@electron-forge/maker-zip": "^7.3.1",
     "@electron-forge/plugin-auto-unpack-natives": "^7.3.1",
+    "@electron-forge/publisher-github": "^7.3.1",
     "@newceptiondev/eslint-config": "1.0.2",
     "@newceptiondev/prettier-config": "1.0.4",
     "@types/jasmine": "~4.0.0",
