--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint": "ng lint",
     "package": "electron-forge package",
     "make": "electron-forge make",
+    "publish": "electron-forge publish",
     "e2e": "ng e2e",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
