--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "name": "Julius Schmidt",
     "email": "newceptiondev@googlemail.com"
   },
-  "license": "UNLICENSED",
+  "license": "MIT",
   "description": "Recipe Library, making it easy to find Recipes based on Ingredients, Cookbook or Categories",
   "main": "app/main.js",
   "scripts": {
@@ -34,7 +34,6 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0-next.0",
     "@angular/cdk": "^14.2.0",
