--- a/.github/workflows/tag-creation.yml
+++ b/.github/workflows/tag-creation.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
+      - name: move to repository
+        run: cd ${process.env.GITHUB_WORKSPACE}
       - name: Set Version Variable
         run: echo "Version=v${npm pkg get version | tr -d \}" >> $GITHUB_ENV
       - name: Create Tag
