--- a/.github/workflows/tag-creation.yml
+++ b/.github/workflows/tag-creation.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   if_merged:
-    if: github.event.pull_request.merged== true
+    # if: github.event.pull_request.merged== true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
