correctly read version

--- a/.github/workflows/tag-creation.yml
+++ b/.github/workflows/tag-creation.yml
@@ -19,7 +19,7 @@ jobs:
           file-to-check: package.json
           only-return-version: true
       - name: Set Version Variable
-        run: echo "Version=v${{steps.actions_project_version_check.outputs.version}}" >> $GITHUB_ENV
+        run: echo "Version=v" ${{ steps.actions_project_version_check.outputs.version }} >> $GITHUB_ENV
       - name: Create Tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
