use id for version fetch action

--- a/.github/workflows/tag-creation.yml
+++ b/.github/workflows/tag-creation.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: avides/actions-project-version-check@v1.4.0
+        id: actions_project_version_check
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           file-to-check: package.json
