--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,8 @@ jobs:
       - name: build
         run: npm run build
       - name: publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_PAT }}
         run: npm run publish
 
   publish_on_mac:
@@ -48,4 +50,6 @@ jobs:
       - name: build
         run: npm run build
       - name: publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_PAT }}
         run: npm run publish
