--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "recipe-library",
   "productName": "Recipe Library",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "author": {
     "name": "Julius Schmidt",
     "email": "newceptiondev@googlemail.com"
@@ -23,7 +23,7 @@
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && electron . --serve",
     "electron:local": "npm run build && electron .",
     "prettier": "prettier --write .",
-    "prettier:check": "prettier .",
+    "prettier:check": "prettier --check .",
     "eslint": "eslint .",
     "eslint:fix": "eslint --fix .",
     "format": "npm run prettier && npm run eslint:fix && npm run prettier",
