--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,7 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "es2020",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "useDefineForClassFields": false
   },
   "exclude": ["node_modules", "cypress", "cypress.config.ts"],
