--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "recipe-library",
   "productName": "Recipe Library",
-  "version": "1.4.7",
+  "version": "1.5.0",
   "author": {
     "name": "Julius Schmidt",
     "email": "newceptiondev@googlemail.com"
@@ -36,30 +36,30 @@
     "cypress:run": "cypress run"
   },
   "dependencies": {
-    "@angular/animations": "^14.0.0-next.0",
-    "@angular/cdk": "^14.2.0",
-    "@angular/common": "^14.0.0-next.0",
-    "@angular/compiler": "^14.0.0-next.0",
-    "@angular/core": "^14.0.0-next.0",
-    "@angular/forms": "^14.0.0-next.0",
-    "@angular/material": "^14.2.0",
-    "@angular/platform-browser": "^14.0.0-next.0",
-    "@angular/platform-browser-dynamic": "^14.0.0-next.0",
-    "@angular/router": "^14.0.0-next.0",
+    "@angular/animations": "^15.2.10",
+    "@angular/cdk": "^15.2.9",
+    "@angular/common": "^15.2.10",
+    "@angular/compiler": "^15.2.10",
+    "@angular/core": "^15.2.10",
+    "@angular/forms": "^15.2.10",
+    "@angular/material": "^15.2.9",
+    "@angular/platform-browser": "^15.2.10",
+    "@angular/platform-browser-dynamic": "^15.2.10",
+    "@angular/router": "^15.2.10",
     "electron-squirrel-startup": "^1.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.12",
+    "@angular-devkit/build-angular": "^15.2.11",
     "@angular-eslint/builder": "14.4.0",
     "@angular-eslint/eslint-plugin": "14.4.0",
     "@angular-eslint/eslint-plugin-template": "14.4.0",
-    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/schematics": "15.2.1",
     "@angular-eslint/template-parser": "14.4.0",
-    "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "^14.0.0-next.0",
+    "@angular/cli": "~15.2.11",
+    "@angular/compiler-cli": "^15.2.10",
     "@cypress/schematic": "^2.5.1",
     "@electron-forge/cli": "^7.3.1",
     "@electron-forge/maker-deb": "^7.3.1",
@@ -85,7 +85,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
-    "typescript": "~4.7.2",
+    "typescript": "~4.8.4",
     "wait-on": "^7.2.0"
   }
 }
